alignment bug fix

--- a/src/components/article-description.css
+++ b/src/components/article-description.css
@@ -153,9 +153,9 @@
     .outer-container {
         display: flex;
         flex-direction: row;
+        justify-content: space-around;
         flex-wrap: wrap;
         padding: 3% 1.25% 0 1.25%;
-        background-color: transparent;
     }
 
     /* rearranging posts */
@@ -173,7 +173,6 @@
         height: 100%;
         width: 20em;
         border-radius: 0.6em;
-        background-color: transparent;
         border-radius: 0.188em;
         box-shadow: none;
     }
@@ -255,6 +254,5 @@
     .fill-space{
         width: 20em;
         height: 10px;
-        border: 2px soild black;
     }
 }
